# TOMAS

./: .env.example  .gitignore  ARCHITECTURE_SUMMARY.md  DEPLOYMENT_STATUS.md  FRONTEND_SETUP_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  MVP_COMPLETE.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  setup.sh  test_backend.sh
backend/: Dockerfile  README.md  START_BACKEND.md  alembic.ini  alembic_base.py  main.py  pyproject.toml  requirements-cmbagent.txt  requirements-core.txt  requirements-denario.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7f571abd592c_initial_migration.py
backend/core/: __init__.py  config.py  database.py  enums.py  mode.py  mode_registry.py
backend/engines/: __init__.py  base.py  cmbagent_engine.py  denario_engine.py
backend/models/: __init__.py  config.py  cost.py  file.py  message.py  session.py
backend/modes/: __init__.py  itops.py  research.py  rfp_sow.py
backend/routers/: __init__.py  execution.py  files.py  modes.py
backend/schemas/: execution.py
backend/services/: __init__.py  denario_service.py  mode_executor.py  session_manager.py
backend/strategies/: itops_strategy.py  research_strategy.py  rfp_strategy.py
frontend/: .env.example  README.md  package-lock.json  package.json  setup.sh  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/execute/[mode_id]/: page.tsx
frontend/app/sessions/: page.tsx
frontend/app/sessions/[session_id]/: page.tsx
frontend/components/: DynamicForm.tsx  ModeCard.tsx  ModeInterface.tsx  ModeSelector.tsx  ResultsViewer.tsx  TaskMonitor.tsx  ThemeToggle.tsx
frontend/components/ui/: Badge.tsx  Button.tsx
frontend/lib/: api.ts  theme-provider.tsx  types.ts  utils.ts
